# predicting_road_accident_risk

./: .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  run_app.py
app/: cards.py  main.py
app/data/: df.csv
app/pages/: data_analysis.py  home.py  model_overview.py  predictions.py  visualization.py
docs/: mkdocs.yml
docs/docs/: index.md
models/LGBM/: reg_lgbm.pkl  val_preds_lgbm.csv
models/Stacked/: stacked_model.pkl  stacked_yhat.csv  stacked_yhat_xgb.csv
models/TabM/: encoders.pkl  scaler.pkl  tabm_bundle.pkl  tabm_final.pt  val_preds_tabm.csv
models/TabM/results/: residual_results.csv  results.csv
models/Tabular/: config.yml  model.ckpt  val_preds_tabular.csv
models/XGB/: reg_xgb.pkl  val_preds_xgb.csv
notebooks/: data_exploration.ipynb  initial_model_training.ipynb  stacked_model.ipynb
road_accident_risk/: __init__.py  config.py  data_loader.py
road_accident_risk/modeling/: base_models.py  meta_learner.py
scripts/: train_stacked_model.py
tests/: test_data_loader.py  test_train_base_models.py
